--- a/Wishes/frontend/package.json
+++ b/Wishes/frontend/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.6",
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "classnames": "^2.3.2",
+    "flowbite": "^1.6.3",
+    "flowbite-svelte": "^0.29.13",
     "svelte": "^3.54.0",
     "vite": "^4.0.0"
   },
