--- a/Wishes/frontend/package.json
+++ b/Wishes/frontend/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.2",
     "flowbite": "^1.6.3",
     "flowbite-svelte": "^0.29.13",
+    "mdi-svelte": "^1.1.2",
     "svelte": "^3.54.0",
     "vite": "^4.0.0"
   },
