--- a/application/backend/package.json
+++ b/application/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mariadb": "^3.1.0"
+    "mariadb": "^3.1.0",
+    "bcrypt": "^5.1.0"
   }
 }
